Landing page completed bugs on alignment hero 4

--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ ul {
 }
 #img2 {
     height: auto;
-    width: 250px;
+    width: 200px;
     border-radius: 15px;
 }
 .image-1,.image-2,.image-3,.image-4 {
@@ -98,6 +98,80 @@ ul {
 }
 .illus {
     color: grey;
-    max-width: 250px;
+    max-width: 200px;
+    text-align: center;
 }
 /* END OF SECOND HERO*/
+.container-3 {
+    background-color: #E5E7EB;
+    padding: 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+    
+}
+.maintext-3 {
+    color: #1F2937;
+    font-size: 36px;
+    font-style: italic;
+    max-width: 800px;
+    font-weight: 1ss00;
+
+}
+.author {
+    color: #1F2937;
+    font-weight: 900;
+    font-size: larger;
+    padding-left: 600px ;
+
+}
+/*END OF THIRD HERO*/
+.container-4 {
+    background-color: #3882F6;
+    padding: 50px;
+    border-radius: 10px;
+    width: 1000px;
+    color: white;   
+    margin: auto;
+    margin-top: 100px;
+    margin-bottom: 100px;
+  
+
+}
+.content-4 {
+    display: flex;
+    font-size: 18px;
+    justify-content: center;
+    gap: 100px;
+    align-items: flex-end
+
+}
+.maintext-4 {
+    font-size: 28px;
+    font-weight: 800;
+    padding-left:130px ;
+    
+
+}
+.signup-button {
+    background-color: #3882F6;
+    width: 160px ;
+    border-radius: 10px ;
+    color: white;
+    padding: 10px;
+    font-size: large;
+    border-color:  white;
+   
+
+}
+/* END OF FOURTH HERO*/
+.footer {
+    background-color: #1F2937;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 40px;
+    font-size: large;
+}
